# quantamental-screener

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  all_stock_scores.csv  app.py  docker-compose.yml  e -i f2ca2c5^  main.py  pyproject.toml  quantamental_equity_screener.ipynb  requirements-dev.txt  requirements-finbert.txt  requirements.txt  screener_config.json  streamlit_app.py  test.py  test_quick.py  top_stocks_recommendations.csv  wake_app.py
.github/workflows/: ci.yml  wake.yml
config/: factor_weights.yaml  settings.py
core/: __init__.py  cache_client.py  cache_mixin.py  data_source.py  factor.py  output_formatter.py  sentiment_model.py
data_sources/: __init__.py  alpha_vantage.py  polygon.py  yahoo_finance.py
factors/: __init__.py  base_factor.py  example_custom_factor.py  momentum_factor.py  my_factor.py  sentiment_factor.py  volatility_factor.py  volume_factor.py
output/: __init__.py  console_reporter.py  csv_exporter.py  plotly_visualizer.py  streamlit_dashboard.py
pipeline/: __init__.py  backtest_engine.py  data_collector.py  scoring_engine.py  universe_selector.py
quantamental/: __init__.py  backtest.py  data_collector.py  scoring.py  sentiment.py  universe.py  utils.py  visualizer.py
scripts/: benchmark_cache.py  clear_redis_cache.py  warm_up_cache.py
sentiment/: __init__.py  ensemble_sentiment.py  finbert_model.py  textblob_model.py  vader_model.py
tests/: __init__.py  conftest.py  test_cache.py  test_factors.py  test_pipeline.py
utils/: __init__.py  logging_utils.py  redis_helpers.py  streamlit_cache.py
