[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantamental-screener"
version = "2.0.0"
description = "Multi‑factor equity screener with sentiment and caching"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Akshayaa", email = "akshayaa@example.com"}]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "ta>=0.10.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "textblob>=0.17.0",
    "vaderSentiment>=3.3.2",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "redis>=5.0.0",
    "fakeredis[lua]>=2.20.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
quantamental = "app:cli"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100